Extra! Extra! Needed an extra colon!

--- a/hieradata/base/CE.yaml
+++ b/hieradata/base/CE.yaml
@@ -26,7 +26,7 @@ osg::osg_release: '3.3'
 classes: 
   - profile::osg::hadoop_client
   - profile::osg::ce
-  - profile::osg::ce:install
+  - profile::osg::ce::install
   - profile::osg::ce::configure
   - profile::osg::ce::service
   - osg::cvmfs
