--- a/hieradata/base/VMTest.yaml
+++ b/hieradata/base/VMTest.yaml
@@ -18,6 +18,7 @@ extra_packages:
   - 'osg-pki-tools'
 #  - 'condor.x86_64'
 #test
+osg::osg_release: '3.3'
 firewall::ensure: 'running'
 firewall_rules:
    '004 Condor ports open':
@@ -29,6 +30,8 @@ classes:
   - osg
   - profile::osg::hadoop_client
   - profile::interactive
+  - profile::osg::ce
+  - profile::osg::cefiles::install
   - osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater  
