--- a/hieradata/base/SE.yaml
+++ b/hieradata/base/SE.yaml
@@ -30,7 +30,7 @@ firewall_rules:
     dport: 8443
     proto: "tcp"
     action: 'accept'
-
+osg::osg_release: '3.3'
 classes: 
   - profile::osg::hadoop_client  
   - osg::cvmfs
