--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -24,6 +24,7 @@ firewall_rules:
      proto: "tcp"
      action: 'accept' 
 # -A INPUT -m comment --comment "Condor ports open" -m state --state NEW -p tcp -m tcp --dport 9000:9999 -j ACCEPT
+osg::osg_release: '3.3'
 classes:
   - profile::osg::hadoop_client
   - profile::interactive
