added glexec to WNs

--- a/hieradata/base/Worker/R720.yaml
+++ b/hieradata/base/Worker/R720.yaml
@@ -10,3 +10,6 @@ classes:
   - osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater
+  - profile::osg::glexec::install
+  - profile::osg::glexec::configure
+  - profile::osg::glexec::service
