--- a/hieradata/base/Worker/R510.yaml
+++ b/hieradata/base/Worker/R510.yaml
@@ -6,3 +6,6 @@ classes:
   - osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater      
+  - profile::osg::glexec::install
+  - profile::osg::glexec::configure
+  - profile::osg::glexec::service  
