--- a/hieradata/base/SE.yaml
+++ b/hieradata/base/SE.yaml
@@ -31,7 +31,7 @@ firewall_rules:
     proto: "tcp"
     action: 'accept'
 osg::osg_release: '3.3'
-cron::job:: 
+cron::params:: 
   minute:'15'
   hour:'1'
   date:'*'
@@ -45,4 +45,4 @@ classes:
   - osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater   
-  - cron::job
+  - cron
