--- a/hieradata/base/SE.yaml
+++ b/hieradata/base/SE.yaml
@@ -31,7 +31,8 @@ firewall_rules:
     proto: "tcp"
     action: 'accept'
 osg::osg_release: '3.3'
-cron::jobs 
+cron::jobs:
+ service: 
   minute:'15'
   hour:'1'
   date:'*'
