add sefiles to SE.yaml
since I put cron in sefiles/install.pp, need to actually use it

--- a/hieradata/base/SE.yaml
+++ b/hieradata/base/SE.yaml
@@ -54,4 +54,7 @@ classes:
   - osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater   
-  - cron
+  - profile::osg::sefiles::install
+  - profile::osg::sefiles::configure
+  - profile::osg::sefiles::service  
+###  - cron
