commented out cvmfs

--- a/hieradata/base/VMTest.yaml
+++ b/hieradata/base/VMTest.yaml
@@ -34,10 +34,10 @@ classes:
   - profile::osg::ce
   - profile::osg::cefiles::install
   - profile::test
-  - profile::osg::cvmfs::user
-  - profile::osg::cvmfs::service
+ # - profile::osg::cvmfs::user
+  #- profile::osg::cvmfs::service
   #- profile::osg::cvmfs::install
-  - profile::osg::cvmfs::config
+  #- profile::osg::cvmfs::config
   #- osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater  
