commented out cvmfs again

--- a/hieradata/base/VMTest.yaml
+++ b/hieradata/base/VMTest.yaml
@@ -37,7 +37,7 @@ classes:
  # - profile::osg::cvmfs::user
   #- profile::osg::cvmfs::service
   #- profile::osg::cvmfs::install
-  - profile::osg::cvmfs::config
+ # - profile::osg::cvmfs::config
   #- osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater  
