--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -96,8 +96,7 @@ osg::cvmfs::http_proxies:
   - 'http://hepcms-squid.privnet:3128'
 osg::cvmfs::cms_local_site: T3_US_UMD
 osg::cvmfs::server_urls: []
-osg::cvmfs::cache_base:
-  - '/tmp/cvmfs'
+osg::cvmfs::cache_base: '/tmp/cvmfs'
 #
 puppet::agent: true
 puppet::classfile: '$statedir/classes.txt'
