need expat-devel
Needed for geant4 compilation

--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -16,6 +16,7 @@ extra_packages:
   - 'xemacs'
   - 'krb5-workstation'
   - 'osg-pki-tools'
+  - 'expat-devel'
 #  - 'condor.x86_64'
 firewall::ensure: 'running'
 firewall_rules:
