remove duplicate cron

--- a/hieradata/base/SE.yaml
+++ b/hieradata/base/SE.yaml
@@ -39,15 +39,15 @@ firewall_rules:
     proto: "tcp"
     action: 'accept'    
 osg::osg_release: '3.3'
-cron::jobs:
- service: 
-  minute:'15'
-  hour:'1'
-  date:'*'
-  month:'*'
-  weekday:'6'
-  user:'root'
-  command:'/sbin/service bestman2 restart >/dev/null 2>&1'
+### cron::jobs:
+###  service: 
+###   minute:'15'
+###   hour:'1'
+###   date:'*'
+###   month:'*'
+###   weekday:'6'
+###   user:'root'
+###   command:'/sbin/service bestman2 restart >/dev/null 2>&1'
   
 classes: 
   - profile::osg::hadoop_client  
