--- a/hieradata/base/Worker/R720.yaml
+++ b/hieradata/base/Worker/R720.yaml
@@ -16,3 +16,4 @@ classes:
   - profile::condor::worker::install
   - profile::condor::worker::configure
   - profile::condor::worker::services
+  - profile::ganglia
