fixed submit condor class paths

--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -29,9 +29,9 @@ osg::osg_release: '3.3'
 classes:
   - profile::osg::hadoop_client
   - profile::interactive
-  - profile::int_submit::configure
-  - profile::int_submit::services
-  - profile::int_submit::install
+  - profile::condor::submit::configure
+  - profile::condor::submit::services
+  - profile::condor::submit::install
   - osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater    
