--- a/hieradata/ovirt.yaml
+++ b/hieradata/ovirt.yaml
@@ -1,8 +1,10 @@
 ---
 classes:
   - puppet
+  - firewall
   - epel
   - omsa
+  - postgresql
   
 puppet::version: '3.7.5-1.el6'
 ## a lot of stuff from common.yaml
