--- a/hieradata/base/Worker/R720.yaml
+++ b/hieradata/base/Worker/R720.yaml
@@ -17,4 +17,7 @@ classes:
   - profile::condor::worker::configure
   - profile::condor::worker::services
   - profile::ganglia
+  - datanode::services
+  - datanode::install
+  - datanode::configure
 osg::osg_release: '3.3'
