added datanode classes for testing

--- a/hieradata/base/VMTest.yaml
+++ b/hieradata/base/VMTest.yaml
@@ -41,3 +41,6 @@ classes:
   - osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater  
+  - datanode::services
+  - datanode::install
+  - datanode::configure
