added test profile

--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -38,6 +38,7 @@ classes:
   - osg::cacerts::updater    
   - osg::wn
   - profile::ganglia
+  - profile::test
  
 # classes: gcc
 osg::cvmfs::quota_limit: '40000'
