added run_omreport profile

--- a/hieradata/base/GridFTP.yaml
+++ b/hieradata/base/GridFTP.yaml
@@ -37,6 +37,7 @@ classes:
   - profile::osg::gftp::configure
   - profile::osg::gftp::service
   - profile::ganglia
+  - profile::run_omreport
   - osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater
