--- a/hieradata/base/Worker/1950.yaml
+++ b/hieradata/base/Worker/1950.yaml
@@ -17,4 +17,5 @@ classes:
   - profile::condor::worker::configure
   - profile::condor::worker::services
   - profile::ganglia
+  - profile::run_ompreport
 osg::osg_release: '3.3'
