Commented out datanode::configure
Since this line was causing the r720 machines fstabs to get messed up, this has been commented out.

--- a/hieradata/base/Worker/R720.yaml
+++ b/hieradata/base/Worker/R720.yaml
@@ -20,5 +20,5 @@ classes:
   - profile::run_omreport
   - datanode::services
   - datanode::install
-  - datanode::configure
+ # - datanode::configure
 osg::osg_release: '3.3'
