Commented out rest of datanode

--- a/hieradata/base/Worker/R720.yaml
+++ b/hieradata/base/Worker/R720.yaml
@@ -18,7 +18,7 @@ classes:
   - profile::condor::worker::services
   - profile::ganglia
   - profile::run_omreport
-  - datanode::services
-  - datanode::install
+  #- datanode::services
+  #- datanode::install
  # - datanode::configure
 osg::osg_release: '3.3'
