--- a/hieradata/base/Squid.yaml
+++ b/hieradata/base/Squid.yaml
@@ -1,18 +1,18 @@
 ---
 nfs::manage_firewall: false
 #osg::osg_release: '3.3'
-# firewall_rules:
-#   '001 allow ssh on internal network':
-#     port: 22
-#     proto: 'tcp'
-#     source: '10.1.0.0/255.255.0.0'
-#     iniface: "eth0"
-#     action: 'accept'
-#   '002 turn off ssh on public network':
-#     port: 22
-#     proto: 'tcp'
-#     iniface: "eth1"
-#     action: 'reject'
+firewall_rules:
+   '001 allow ssh on internal network':
+     port: 22
+     proto: 'tcp'
+     source: '10.1.0.0/255.255.0.0'
+     iniface: "eth0"
+     action: 'accept'
+   '002 turn off ssh on public network':
+     port: 22
+     proto: 'tcp'
+     iniface: "eth1"
+     action: 'reject'
 # Osg::Squid/Firewall has its own settings so let that be handled there
 # since it seems to cause a conflict to turn it off.
 #firewall::ensure: 'stopped'    
