--- a/hieradata/base/Squid.yaml
+++ b/hieradata/base/Squid.yaml
@@ -13,6 +13,18 @@ firewall_rules:
      proto: 'tcp'
      iniface: "eth2"
      action: 'reject'
+   '003 allow squid monitoring':
+     port: 3401
+     proto: 'udp'
+     source: '128.142.0.0/16'
+     iniface: "eth2"
+     action: 'accept'
+   '004 allow squid monitoring':
+     port: 3401
+     proto: 'udp'
+     source: '188.185.0.0/17'
+     iniface: "eth2"
+     action: 'accept'
 # Osg::Squid/Firewall has its own settings so let that be handled there
 # since it seems to cause a conflict to turn it off.
 #firewall::ensure: 'stopped'    
