Added rule for 188.184.128.0/17
Also changed squid ports to sports

--- a/hieradata/base/Squid.yaml
+++ b/hieradata/base/Squid.yaml
@@ -14,17 +14,23 @@ firewall_rules:
      iniface: "eth2"
      action: 'reject'
    '003 allow squid monitoring':
-     port: 3401
+     sport: 3401
      proto: 'udp'
      source: '128.142.0.0/16'
      iniface: "eth2"
      action: 'accept'
    '004 allow squid monitoring':
-     port: 3401
+     sport: 3401
      proto: 'udp'
      source: '188.185.0.0/17'
      iniface: "eth2"
      action: 'accept'
+    '005 allow squid monitoring':
+      sport: 3401
+      proto: 'udp'
+      source: '188.184.128.0/17'
+      iniface: "eth2"
+      action: 'accept'
 # Osg::Squid/Firewall has its own settings so let that be handled there
 # since it seems to cause a conflict to turn it off.
 #firewall::ensure: 'stopped'    
