--- a/hieradata/base/Worker/R720.yaml
+++ b/hieradata/base/Worker/R720.yaml
@@ -18,6 +18,7 @@ classes:
   - profile::condor::worker::services
   - profile::ganglia
   - profile::run_omreport
+  - profile::coretempreport
   #- datanode::services
   #- datanode::install
  # - datanode::configure
